Spell check on index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- <details>
               <p></p>
             </details> -->
-            <li>CyberSeacurity</li>
+            <li>CyberSecurity</li>
             <!-- <Details>
               <p></p>
             </Details> -->
@@ -86,7 +86,7 @@
               <li>Excel</li>
               <li>Access</li>
               <li>Word</li>
-              <li>Power Point Presentation</li>
+              <li>PowerPoint Presentation</li>
               <li>Publisher</li>
               <li>Office Planner</li>
             </ul>
@@ -111,7 +111,7 @@
       <div class="work">
         <ul>
           <li>
-           Crew Menber &#45; Mostly work in the kitchen but also work the drive thru
+           Crew Member &#45; Mostly work in the kitchen but also work the drive &#45;thru
           </li>
         </ul>
       </div>
