--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text">
           <h2>Shanal Rathnaweera</h2>
           <h3>Student</h3>
-          <p>Hi, my name is Shanal. <br>I'm Passionate about programming and always eager to explore the ever-evolving world of IT.</p>
+          <p>Hi, my name is Shanal. <br>I'm passionate about programming and always eager to explore the everevolving world of IT.</p>
           <a href="about.html"> About me</a>
           <a href="#education"> Education</a>
           <a href="#work"> Work</a>
@@ -52,7 +52,7 @@
         <div>
           <h3>2023 &#45; Present</h3>
           <ul>
-            <p><b>Bachelor&#39;s in Information Technology level 7</b></p>
+            <p><b>Bachelor&#39;s in Information Technology (Level 7)</b></p>
           </ul>
 
           <ul class="modules">
@@ -68,7 +68,7 @@
             <!-- <Details>
               <p></p>
             </Details> -->
-            <li>Principle of Software Testing</li>
+            <li>Principles of Software Testing</li>
             <!-- <details>
               <p></p>
             </details> -->
@@ -95,7 +95,7 @@
           <div class="olevels">
             <h3>2009 &#45; 2021</h3>
             <ul>
-              <p>Generl certificaton 	&#40;Ordinary level	&#41; S	&#46;Thomas	&#39;College&#44; Mount Lavania&#44; Sri Lanka</p>            
+              <p>General Certificate 	&#40;Ordinary level	&#41; S	&#46;Thomas	&#39;College&#44; Mount Lavania&#44; Sri Lanka</p>            
             </ul>
           </div>
 
@@ -133,7 +133,7 @@
 
         <h3>Server Administration</h3>
         <ul>
-          <li>Linux(Ubuntu)</li>
+          <li>Linux (Ubuntu)</li>
           <li>Samba</li>
           <li>Networking Fundamentals</li>
         </ul>
@@ -146,7 +146,7 @@
 
         <h3>Version Control</h3>
         <ul>
-          <li>Git Desktop</li>
+          <li>GitHub Desktop</li>
           <li>GitHub</li>
         </ul>
 
@@ -187,7 +187,7 @@
             <h4>About me</h4>
             <ul>
               <li><a href="about.html">Achivements</a></li>
-              <li><a href="about.html">Volenteer</a></li>
+              <li><a href="about.html">Volunteer</a></li>
               <li><a href="about.html">Hobbies</a></li>
             </ul>
           </div>
@@ -208,7 +208,7 @@
           </div>
         </div>
       </div>
-      <p>&copy:Shanal Rathnaweera. All rights Reserved</p>
+      <p>&copy Shanal Rathnaweera. All rights Reserved</p>
     </footer>
      
     
