--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </ul>
 
         <ul>
-          <p>Rowing, S.Thomas College, Mount Lavania, Sri Lanka. I represented my alama mater in rowing<br> and was awarded school colours in recognition of my  at the inter-school events and national<br> events held during the years.</p>
+          <p>Rowing, S.Thomas College, Mount Lavania, Sri Lanka. I represented my school in rowing<br> and was awarded school colours in recognition of my performance at inter-school events and national<br> events held during the years.</p>
 
           <p style="margin-top: 15px;
           font-weight: 500;
@@ -64,7 +64,7 @@
           <h3>2018 &#45; 2021</h3>
         </ul>
         <div>
-          <p>Rowing, Colombo Rowing Club,<br> Based on my achievements representing the school and was awarded Colombo Rowing Club <br> the Junior Rowing Nationals held in Jan 2021</p>
+          <p>Rowing, Colombo Rowing Club,<br> Based on my achievements representing the school and was awarded by the Colombo Rowing Club <br> the Junior Rowing Nationals held in Jan 2021</p>
         </div>
       
     </section>
