--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
       <h2 style="text-align: center;">Volunteer</h2>
         <ul>
           <p>Starjam New Zealand</p>
+          <p>Volunteered with StarJam, an organization that empowers young people with disabilities through performance and creativity.</p>
         </ul>
       
     </section>
